manifests/cluster-addons/media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 6767
      targetPort: http
      protocol: TCP
      name: http
